# examples

./: README.md
claim-adjudication-agent/: .env.example  README.md  pyproject.toml
claim-adjudication-agent/.claude/skills/adjudicate/: SKILL.md
claim-adjudication-agent/.claude/skills/coverage-and-rules/: SKILL.md
claim-adjudication-agent/.claude/skills/explain-decision/: SKILL.md
claim-adjudication-agent/.claude/skills/halo-navigation/: SKILL.md
claim-adjudication-agent/.claude/skills/intake-and-validate/: SKILL.md
claim-adjudication-agent/db/: 01_schema.sql  seed.py
claim-adjudication-agent/src/agent/: main.py  prompts.py
claim-adjudication-agent/src/mcp_server/: db.py  engine.py  halo.py  server.py
claim-adjudication-agent/src/scripts/: reviewer_console.py  run_demo.py
creditline-decision-agent/: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  mimic.json  pyproject.toml
creditline-decision-agent-langgraph/: .env.example  .gitignore  README.md  pyproject.toml
creditline-decision-agent-langgraph-ts/: .env.example  README.md  package-lock.json  package.json
creditline-decision-agent-langgraph-ts/src/agent/: main.ts  prompts.ts
creditline-decision-agent-langgraph-ts/src/scripts/: run-demo.ts
creditline-decision-agent-langgraph/agent/: main.py  prompts.py
creditline-decision-agent-langgraph/scripts/: capture_verify.py  live_run.py  run_demo.py  trace_compare.py
creditline-decision-agent-openai/: .env.example  .gitignore  README.md  pyproject.toml
creditline-decision-agent-openai-ts/: .env.example  README.md  package-lock.json  package.json
creditline-decision-agent-openai-ts/src/agent/: main.ts  prompts.ts
creditline-decision-agent-openai-ts/src/scripts/: run-demo.ts
creditline-decision-agent-openai/agent/: decision.py  main.py  prompts.py
creditline-decision-agent-openai/scripts/: live_run.py  run_demo.py
creditline-decision-agent-ts/: .env.example  .mcp.json  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
creditline-decision-agent-ts/.claude/skills/decisioning/: SKILL.md
creditline-decision-agent-ts/.claude/skills/intake/: SKILL.md
creditline-decision-agent-ts/db/: 01_mimic_creditline_schema.sql  03_roles_and_grants.sql  seed.ts
creditline-decision-agent-ts/src/agent/: decision.ts  main.ts  prompts.ts
creditline-decision-agent-ts/src/mcp/: db.ts  models.ts  server.ts
creditline-decision-agent-ts/src/scripts/: officer-console.ts  run-demo.ts
creditline-decision-agent/.claude/: settings.json
creditline-decision-agent/.claude/skills/decisioning/: SKILL.md
creditline-decision-agent/.claude/skills/scoring/: SKILL.md
creditline-decision-agent/agent/: decision.py  main.py  prompts.py
creditline-decision-agent/db/seed/: seed_mimic.py
creditline-decision-agent/mcp_servers/mimic_creditline/: __init__.py  db.py  models.py  server.py
creditline-decision-agent/scripts/: capture_raw_stream.py  confirm_capture.py  init_db.sh  officer_console.py  run_demo.py
dental-reception-agent/: README.md  package-lock.json  package.json
dental-reception-agent-python/: .env.example  README.md  pyproject.toml  requirements.txt
dental-reception-agent-python/.claude/skills/halo-navigation/: SKILL.md
dental-reception-agent-python/db/: 01_schema.sql  seed.py
dental-reception-agent-python/src/agent/: main.py  prompts.py
dental-reception-agent-python/src/mcp_server/: db.py  halo.py  server.py
dental-reception-agent-python/src/scripts/: frontdesk_console.py  run_demo.py
dental-reception-agent/.claude/skills/booking/: SKILL.md
dental-reception-agent/.claude/skills/coverage-check/: SKILL.md
dental-reception-agent/.claude/skills/patient-admin/: SKILL.md
dental-reception-agent/.claude/skills/recalls-and-reminders/: SKILL.md
dental-reception-agent/.claude/skills/reschedule-cancel/: SKILL.md
dental-reception-agent/db/: seed.ts
dental-reception-agent/src/agent/: main.ts  prompts.ts
dental-reception-agent/src/mcp/: db.ts  halo.ts  server.ts
dental-reception-agent/src/scripts/: frontdesk-console.ts  run-demo.ts
monitoring-agent/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
monitoring-agent/.claude/skills/diagnose/: SKILL.md
monitoring-agent/.claude/skills/halo-navigation/: SKILL.md
monitoring-agent/.claude/skills/incident-response/: SKILL.md
monitoring-agent/.claude/skills/triage/: SKILL.md
monitoring-agent/db/: 01_schema.sql  seed.ts
monitoring-agent/src/agent/: main.ts  prompts.ts
monitoring-agent/src/mcp/: db.ts  halo.ts  server.ts
monitoring-agent/src/scripts/: oncall-console.ts  run-demo.ts
