[project]
name = "creditline-decision-agent-langgraph"
version = "0.1.0"
description = "Credit-Line Decision Agent on LangGraph — same agent, same mimic-creditline MCP environment, different runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2",
    "langchain>=1.3",
    "langchain-mcp-adapters>=0.2",
    "langchain-anthropic>=1.4",
    # Runfile audit capture, from PyPI. The [langgraph] extra wires up the
    # LangGraph adapter (instrument) used in agent/main.py.
    "runfile-ai[langgraph]>=0.1.2",
    # The shared mimic-creditline MCP server runs as a subprocess from the
    # sibling project; these are its runtime deps so this venv can launch it.
    "mcp>=1.2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
