[project]
name = "creditline-decision-agent-openai"
version = "0.1.0"
description = "Credit-Line Decision Agent on the OpenAI Agents SDK — same agent, same mimic-creditline MCP environment, different runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.17",
    # The shared mimic-creditline MCP server runs as a subprocess from the
    # sibling project; these are its runtime deps so this venv can launch it.
    "mcp>=1.2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Runfile audit capture (optional): the OpenAI Agents adapter ships in runfile-ai
# 0.3.0 (0.2.x shipped only an instrument_runner() skeleton).
runfile = ["runfile-ai[openai-agents]>=0.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
