[project]
name = "creditline-decision-agent"
version = "0.1.0"
description = "Human-in-the-loop credit-line decision agent with tamper-evident audit (the runfile), built on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.0",
    "mcp>=1.2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
creditline-mcp = "mcp_servers.mimic_creditline.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers", "agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
